<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="88dp">

    <LinearLayout
        android:id="@+id/textContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="16dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/mobileName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:textSize="16sp"
            android:textStyle="bold"
            android:fontFamily="sans-serif"
            tools:text="Lenovo A6000 Plus" />

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_product_price"
                android:textSize="14sp"
                android:fontFamily="sans-serif" />

            <TextView
                android:id="@+id/mobilePrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:textSize="14sp"
                android:fontFamily="sans-serif"
                tools:text="7499" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_product_quantity"
                android:textSize="14sp"
                android:fontFamily="sans-serif" />

            <TextView
                android:id="@+id/mobileQuantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:textSize="14sp"
                android:fontFamily="sans-serif"
                tools:text="5" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/decrease"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="16dp"
        android:contentDescription="@string/decrease_quantity"
        android:clickable="true"
        android:src="@drawable/ic_remove_black_24dp"/>

</RelativeLayout>